--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,1 +1,40 @@
+#heading {
+    margin: 30px;
+    font-size: 25px;
+    text-decoration-color: black;
+    padding: 10px;
+    color: black;
+    font-weight: bold;
+}
 
+.center {
+    text-align: center;
+}
+
+#headingSite {
+    text-align: center;
+    color: black;
+    font-weight: bold;
+}
+
+.sec {
+    width: 100%;
+    height: 600px;
+    background: grey;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+#secHeading {
+    text-align: center;
+    padding-top: 5px;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#secText {
+    padding: 10px;
+    align-content: center;
+    line-height: 20px;
+}
